--- a/index.html
+++ b/index.html
@@ -5,11 +5,184 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Test Site</title>
+    <title>Let's Travel</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
+
+    A way to connect bootstrap CSS via external remote server w/o downloading it on your own -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+    <header class="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="#">Let's Travel</a>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacts</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Phone number"
+                            aria-label="Search">
+                        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Call me</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="main">
+        <div class="container">
+            <!-- Slider -->
+            <div id="carouselExampleCaptions" class="carousel slide mt-1-5 " data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/slider-1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Golden Gate Bridge</h5>
+                            <p>San Francisco, U.S.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/slider-2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Niagara Falls</h5>
+                            <p>Border of Ontario, Canada, and New York, United States</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/slider-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Stonehenge</h5>
+                            <p>Wiltshire, England</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div class="cards">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="card mt-1-5 " style="width: 26rem;">
+                            <img src="img/img-1.jpg" class="card-img-top" alt="Eiffel Tower">
+                            <div class="card-body">
+                                <h5 class="card-title">Eiffel Tower</h5>
+                                <p class="card-text">The Eiffel Tower is a wrought iron lattice tower on the Champ de
+                                    Mars in Paris, France.</p>
+                                <a href="#" class="btn btn-primary">Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card mt-1-5 " style="width: 26rem;">
+                            <img src="img/img-2.jpg" class="card-img-top" alt="Big Ben">
+                            <div class="card-body">
+                                <h5 class="card-title">Big Ben</h5>
+                                <p class="card-text">Big Ben is the nickname for the Great Bell of the clock at the
+                                    north end of the Palace of Westminster in London.</p>
+                                <a href="#" class="btn btn-primary">Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card mt-1-5 " style="width: 26rem;">
+                            <img src="img/img-3.jpg" class="card-img-top" alt="Statue of Liberty">
+                            <div class="card-body">
+                                <h5 class="card-title">Statue of Liberty</h5>
+                                <p class="card-text">The Statue of Liberty is a colossal neoclassical sculpture on
+                                    Liberty Island in New York Harbor in New York City, in the United States.</p>
+                                <a href="#" class="btn btn-primary">Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card mt-1-5 " style="width: 26rem;">
+                            <img src="img/img-4.jpg" class="card-img-top" alt="Sydney Opera House">
+                            <div class="card-body">
+                                <h5 class="card-title">Sydney Opera House</h5>
+                                <p class="card-text">The Sydney Opera House is a multi-venue performing arts centre in
+                                    Sydney, Australia. It is one of the 20th century's most famous and distinctive
+                                    buildings.</p>
+                                <a href="#" class="btn btn-primary">Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card mt-1-5 " style="width: 26rem">
+                            <img src="img/img-5.jpg" class="card-img-top" alt="Parliament Hill">
+                            <div class="card-body">
+                                <h5 class="card-title">Parliament Hill</h5>
+                                <p class="card-text">Parliament Hill, colloquially known as The Hill, is an area of
+                                    Crown land on the southern banks of the Ottawa River in downtown Ottawa, Ontario.
+                                    Its Gothic revival suite of buildings is the home of the Parliament of Canada and
+                                    has architectural elements of national symbolic importance.</p>
+                                <a href="#" class="btn btn-primary">Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card mt-1-5 " style="width: 26rem;">
+                            <img src="img/img-6.jpg" class="card-img-top" alt="Great Wall of China">
+                            <div class="card-body">
+                                <h5 class="card-title">Great Wall of China</h5>
+                                <p class="card-text">The Great Wall of China is a series of fortifications made of
+                                    stone, brick, rammed earth, wood, and other materials, generally built to protect
+                                    the Chinese states and empires against the raids and invasions.</p>
+                                <a href="#" class="btn btn-primary">Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="footer bg-light mt-1-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 d-flex align-items-center">
+                    <p class="copy">@2033. All Rights Recieved</p>
+                </div>
+                <div class="col-6 d-flex justify-content-end align-items-center">
+                    <button class="btn btn-primary"> Contact Us</button>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
