Added responsivness & deleted useless js

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <!-- Cards -->
             <div class="cards">
                 <div class="row">
-                    <div class="col-4">
-                        <div class="card mt-1-5 " style="width: 26rem;">
+                    <div class="col-12 col-sm-12 col-lg-6 col-xl-4">
+                        <div class="card mt-1-5 " style="width: 25rem;">
                             <img src="img/img-1.jpg" class="card-img-top" alt="Eiffel Tower">
                             <div class="card-body">
                                 <h5 class="card-title">Eiffel Tower</h5>
@@ -106,8 +106,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="card mt-1-5 " style="width: 26rem;">
+                    <div class="col-12 col-sm-12 col-lg-6 col-xl-4">
+                        <div class="card mt-1-5 " style="width: 25rem;">
                             <img src="img/img-2.jpg" class="card-img-top" alt="Big Ben">
                             <div class="card-body">
                                 <h5 class="card-title">Big Ben</h5>
@@ -117,8 +117,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="card mt-1-5 " style="width: 26rem;">
+                    <div class="col-12 col-sm-12 col-lg-6 col-xl-4">
+                        <div class="card mt-1-5 " style="width: 25rem;">
                             <img src="img/img-3.jpg" class="card-img-top" alt="Statue of Liberty">
                             <div class="card-body">
                                 <h5 class="card-title">Statue of Liberty</h5>
@@ -128,8 +128,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="card mt-1-5 " style="width: 26rem;">
+                    <div class="col-12 col-sm-12 col-lg-6 col-xl-4">
+                        <div class="card mt-1-5 " style="width: 25rem;">
                             <img src="img/img-4.jpg" class="card-img-top" alt="Sydney Opera House">
                             <div class="card-body">
                                 <h5 class="card-title">Sydney Opera House</h5>
@@ -140,8 +140,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="card mt-1-5 " style="width: 26rem">
+                    <div class="col-12 col-sm-12 col-lg-6 col-xl-4">
+                        <div class="card mt-1-5 " style="width: 25rem">
                             <img src="img/img-5.jpg" class="card-img-top" alt="Parliament Hill">
                             <div class="card-body">
                                 <h5 class="card-title">Parliament Hill</h5>
@@ -153,8 +153,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="card mt-1-5 " style="width: 26rem;">
+                    <div class="col-12 col-sm-12 col-lg-6 col-xl-4">
+                        <div class="card mt-1-5 " style="width: 25rem;">
                             <img src="img/img-6.jpg" class="card-img-top" alt="Great Wall of China">
                             <div class="card-body">
                                 <h5 class="card-title">Great Wall of China</h5>
@@ -196,8 +196,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <input type="submit" class="btn btn-primary" value="Submit">
                 </div>
             </div>
         </div>
