--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <form class="d-flex">
                         <input class="form-control mr-sm-2" type="search" placeholder="Phone number"
                             aria-label="Search">
-                        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Call me</button>
+                        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"
+                            style="white-space: nowrap;">Call me</button>
                     </form>
                 </div>
             </div>
